--- a/src/ECommerce.API/ECommerce.API.csproj
+++ b/src/ECommerce.API/ECommerce.API.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Modules\Orders\Orders.Application\Orders.Application.csproj" />
     <ProjectReference Include="..\Modules\Orders\Orders.Infrastructure\Orders.Infrastructure.csproj" />
+    <ProjectReference Include="..\Modules\Products\Products.Application\Products.Application.csproj" />
   </ItemGroup>
 
 </Project>
