--- a/src/Modules/Products/Products.Application/Products.Application.csproj
+++ b/src/Modules/Products/Products.Application/Products.Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Folder Include="Commands\" />
     <Folder Include="Commands\CreateProduct\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
   <PropertyGroup>
