Add products data migrations

--- a/src/ECommerce.API/appsettings.json
+++ b/src/ECommerce.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "OrdersDb": "Server=localhost;Database=OrdersDb;Trusted_Connection=True;TrustServerCertificate=True",
-    "ProductsDb": "Server=(localdb)\\MSSQLLocalDB;Database=ProductsDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "ProductsDb": "Server=localhost;Database=ProductsDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
