--- a/src/Modules/Orders/Orders.Application/Orders.Application.csproj
+++ b/src/Modules/Orders/Orders.Application/Orders.Application.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
