--- a/src/Modules/Orders/Orders.Application/Orders.Application.csproj
+++ b/src/Modules/Orders/Orders.Application/Orders.Application.csproj
@@ -10,6 +10,10 @@
     <ProjectReference Include="..\..\Products\Products.Contracts\Products.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
