--- a/src/Modules/Orders/Orders.Application/Orders.Application.csproj
+++ b/src/Modules/Orders/Orders.Application/Orders.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Commands\CancelOrder\" />
     <Folder Include="Events\" />
   </ItemGroup>
 
