Add order pay command and hanler + update controller

--- a/src/Modules/Orders/Orders.Application/Orders.Application.csproj
+++ b/src/Modules/Orders/Orders.Application/Orders.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Commands\CancelOrder\" />
+    <Folder Include="Commands\PayOrder\" />
     <Folder Include="Events\" />
   </ItemGroup>
 
