--- a/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
+++ b/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
@@ -14,6 +14,10 @@
     <ProjectReference Include="..\Orders.Domain\Orders.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Outbox\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
