--- a/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
+++ b/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
@@ -7,6 +7,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
