Update Order status to ENUM + Apply migration

--- a/src/Modules/Orders/Orders.Domain/Orders.Domain.csproj
+++ b/src/Modules/Orders/Orders.Domain/Orders.Domain.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <Folder Include="Common\" />
     <Folder Include="Events\" />
+    <Folder Include="ValueObjects\" />
   </ItemGroup>
 
 </Project>
