--- a/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
+++ b/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
@@ -8,6 +8,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Messaging\" />
     <Folder Include="Outbox\" />
   </ItemGroup>
 
