Add Inbox message for products

--- a/src/Modules/Products/Products.Infrastructure/Products.Infrastructure.csproj
+++ b/src/Modules/Products/Products.Infrastructure/Products.Infrastructure.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Inbox\" />
     <Folder Include="Persistence\" />
     <Folder Include="Read\" />
   </ItemGroup>
