--- a/src/Modules/Products/Products.Infrastructure/Products.Infrastructure.csproj
+++ b/src/Modules/Products/Products.Infrastructure/Products.Infrastructure.csproj
@@ -7,6 +7,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
   
   <ItemGroup>
