--- a/src/Modules/Orders/Orders.Application/Orders.Application.csproj
+++ b/src/Modules/Orders/Orders.Application/Orders.Application.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Orders.Domain\Orders.Domain.csproj" />
+    <ProjectReference Include="..\Orders.Contracts\Orders.Contracts.csproj" />
     <ProjectReference Include="..\..\Products\Products.Contracts\Products.Contracts.csproj" />
   </ItemGroup>
 
@@ -14,6 +15,7 @@
     <Folder Include="Commands\CancelOrder\" />
     <Folder Include="Commands\PayOrder\" />
     <Folder Include="Events\" />
+    <Folder Include="Outbox\" />
   </ItemGroup>
 
   <PropertyGroup>
