--- a/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
+++ b/src/Modules/Orders/Orders.Infrastructure/Orders.Infrastructure.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Orders.Application\Orders.Application.csproj" />
+    <ProjectReference Include="..\Orders.Contracts\Orders.Contracts.csproj" />
     <ProjectReference Include="..\Orders.Domain\Orders.Domain.csproj" />
   </ItemGroup>
 
