Refactor messaging consumer side

--- a/src/Modules/Products/Products.Infrastructure/Products.Infrastructure.csproj
+++ b/src/Modules/Products/Products.Infrastructure/Products.Infrastructure.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Inbox\" />
+    <Folder Include="Messaging\" />
     <Folder Include="Persistence\" />
     <Folder Include="Read\" />
   </ItemGroup>
